myteo/test/analyze/type_check/unary_operation.exp
Error: Expected type `int` but found `bool`
test/analyze/type_check/unary_operation.myte:9:4-8
 9 |   (+true: int);
   |     ^^^^

Error: Expected type `int` but found `bool`
test/analyze/type_check/unary_operation.myte:10:4-8
 10 |   (-true: int);
    |     ^^^^

Error: Expected types `bool` or `int` but found `string`
test/analyze/type_check/unary_operation.myte:11:4-6
 11 |   (!"": bool);
    |     ^^